ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MMM-DD date format).

------------------------------------------------------------------------------

2013-Jan-07 Tilmann Zaschke
		* Removed some dead code and unnecessary casts
		* Added some @Override annotations

2013-Jan-06 Tilmann Zaschke
		* Removed some more generic and javadoc warnings.
		* Changed some DObject internal methods to protected to avoid warnings.

2013-Jan-06 Tilmann Zaschke
		* Changed DVector3 from double[] to double d0,d1,d2. This should
		  by about 10% faster for pure vector math and should save some memory.

2013-Jan-06 Tilmann Zaschke
		* Removed a number of deprecation and javadoc warnings.

		   ******************************************************************
2012-Oct-07 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.4
		   ******************************************************************

2012-Sep-24 Tilmann Zaschke
		* Test for unsolved (Bug 19): ray-cylinder collision may fail.

2012-Sep-23 Tilmann Zaschke
		* Fixed ray-box collider (Bug 18)

2012-Jul-30 Tilmann Zaschke
		* Updated README.txt


		   ******************************************************************
2012-Jun-05 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.3
		   ******************************************************************

2012-Jul-20 Tilmann Zaschke
		* Fixed Exception/Memory leak when destroying objects.

2012-Jul-11 Tilmann Zaschke
		* Fixed NPE in DxGeom (dropping composite in DemoTrimesh)

2012-Jun-29 Tilmann Zaschke
		* Web page updates


		   ******************************************************************
2012-Jun-05 Tilmann Zaschke
		* Release of ode4j-0.12.0-j1.2
		   ******************************************************************

2012-Jun-08 Tilmann Zaschke
		* Fixed broken MPRBoxBox test.