@@ -9,6 +9,9 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+2013-Jan-12 Tilmann Zaschke
+		* Fixed generic warnings in libccd port
+
 2013-Jan-07 Tilmann Zaschke
 		* Removed some dead code and unnecessary casts
 		* Added some @Override annotations
